compiler/lume_parser/src/snapshots/lume_parser__tests__conditional_snapshots@unless_else_empty.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse_expr(\"unless true { } else { }\")"
---
[
    Unless(
        UnlessCondition {
            cases: [],
            location: Location(
                0..24,
            ),
        },
    ),
]
