compiler/lume_parser/src/snapshots/lume_parser__tests__conditional_snapshots@unless_empty.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse_expr(\"unless true { }\")"
---
[
    Unless(
        UnlessCondition {
            cases: [
                Condition {
                    condition: Some(
                        Literal(
                            Boolean(
                                BooleanLiteral {
                                    value: true,
                                    location: Location(
                                        7..11,
                                    ),
                                },
                            ),
                        ),
                    ),
                    block: Block {
                        statements: [],
                        location: Location(
                            12..15,
                        ),
                    },
                    location: Location(
                        7..15,
                    ),
                },
            ],
            location: Location(
                0..15,
            ),
        },
    ),
]
