compiler/lume_parser/src/snapshots/lume_parser__tests__conditional_snapshots@unless_statement.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse_expr(\"unless true { let a = 0; }\")"
---
[
    Unless(
        UnlessCondition {
            cases: [
                Condition {
                    condition: Some(
                        Literal(
                            Boolean(
                                BooleanLiteral {
                                    value: true,
                                    location: Location(
                                        7..11,
                                    ),
                                },
                            ),
                        ),
                    ),
                    block: Block {
                        statements: [
                            VariableDeclaration(
                                VariableDeclaration {
                                    name: Identifier {
                                        name: "a",
                                        location: Location(
                                            18..19,
                                        ),
                                    },
                                    variable_type: None,
                                    value: Literal(
                                        Int(
                                            IntLiteral {
                                                value: 0,
                                                location: Location(
                                                    22..23,
                                                ),
                                                kind: I32,
                                            },
                                        ),
                                    ),
                                    location: Location(
                                        14..24,
                                    ),
                                },
                            ),
                        ],
                        location: Location(
                            12..26,
                        ),
                    },
                    location: Location(
                        7..26,
                    ),
                },
            ],
            location: Location(
                0..26,
            ),
        },
    ),
]
