compiler/lume_parser/src/snapshots/lume_parser__tests__construction_snapshots@field.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"Foo { bar: 0 };\")"
---
SOURCE_FILE@0..15
  EXPR_STMT@0..15
    CONSTRUCT_EXPR@0..14
      PATH@0..4
        PATH_TYPE@0..4
          NAME@0..3
            IDENT@0..3 "Foo"
          WHITESPACE@3..4 " "
      LEFT_BRACE@4..5 "{"
      WHITESPACE@5..6 " "
      CONSTRUCTOR_FIELD@6..12
        NAME@6..9
          IDENT@6..9 "bar"
        COLON@9..10 ":"
        WHITESPACE@10..11 " "
        LIT_EXPR@11..12
          INTEGER_LIT@11..12
            INTEGER_LIT@11..12 "0"
      WHITESPACE@12..13 " "
      RIGHT_BRACE@13..14 "}"
    SEMICOLON@14..15 ";"
