compiler/lume_parser/src/snapshots/lume_parser__tests__construction_snapshots@missing_comma.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"Foo { bar: 0 baz };\")"
---
SOURCE_FILE@0..19
  EXPR_STMT@0..19
    CONSTRUCT_EXPR@0..18
      PATH@0..4
        PATH_TYPE@0..4
          NAME@0..3
            IDENT@0..3 "Foo"
          WHITESPACE@3..4 " "
      LEFT_BRACE@4..5 "{"
      WHITESPACE@5..6 " "
      CONSTRUCTOR_FIELD@6..12
        NAME@6..9
          IDENT@6..9 "bar"
        COLON@9..10 ":"
        WHITESPACE@10..11 " "
        LIT_EXPR@11..12
          INTEGER_LIT@11..12
            INTEGER_LIT@11..12 "0"
      WHITESPACE@12..13 " "
      IDENT@13..16 "baz"
      WHITESPACE@16..17 " "
      RIGHT_BRACE@17..18 "}"
    SEMICOLON@18..19 ";"

expected COMMA@13..16
