compiler/lume_parser/src/snapshots/lume_parser__tests__doc_comments_snapshots@enum_case.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse(r#\"enum Foo {\n            /// This is a doc comment\n            Bar\n        }\"#)"
---
[
    TypeDefinition(
        Enum(
            EnumDefinition {
                name: Identifier {
                    name: "Foo",
                    location: Location(
                        5..8,
                    ),
                },
                cases: [
                    EnumDefinitionCase {
                        name: Identifier {
                            name: "Bar",
                            location: Location(
                                61..64,
                            ),
                        },
                        parameters: [],
                        location: Location(
                            61..64,
                        ),
                        documentation: Some(
                            "This is a doc comment",
                        ),
                    },
                ],
                location: Location(
                    0..74,
                ),
                documentation: None,
            },
        ),
    ),
]
